--- a/package.json
+++ b/package.json
@@ -1,18 +1,21 @@
 {
-  "name": "homebridge-dummy",
+  "name": "homebridge-switch-http",
   "version": "0.1.0",
-  "description": "Dummy switches for Homebridge: https://github.com/nfarina/homebridge",
+  "description": "Get input from switches via http. Plugin for Homebridge: https://github.com/nfarina/homebridge",
   "license": "ISC",
   "keywords": [
     "homebridge-plugin"
   ],
   "repository": {
     "type": "git",
-    "url": "git://github.com/nfarina/homebridge-dummy.git"
+    "url": "git://github.com/JonesfromHan/homebridge-switch-http.git"
   },
   "bugs": {
-    "url": "http://github.com/nfarina/homebridge-dummy/issues"
+    "url": "http://github.com/JonesfromHan/homebridge-switch-http/issues"
   },
+  "dependencies": {
+    "express": "*"
+  }
   "engines": {
     "node": ">=0.12.0",
     "homebridge": ">=0.2.0"
