--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
-  "name": "homebridge-switch-http",
-  "version": "0.1.1",
-  "description": "Get input from switches via http. Plugin for Homebridge: https://github.com/nfarina/homebridge",
+  "name": "homebridge-button-http",
+  "version": "0.0.1",
+  "description": "Get input from buttons via http. Plugin for Homebridge: https://github.com/nfarina/homebridge",
   "license": "ISC",
   "keywords": [
     "homebridge-plugin"
   ],
   "repository": {
     "type": "git",
-    "url": "git://github.com/JonesfromHan/homebridge-switch-http.git"
+    "url": "git://github.com/VojGin/homebridge-button-http.git"
   },
   "bugs": {
-    "url": "http://github.com/JonesfromHan/homebridge-switch-http/issues"
+    "url": "http://github.com/VojGin/homebridge-button-http/issues"
   },
   "dependencies": {
     "express": "*"
